--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,8 @@
     <maven.plugin.compiler.version>2.3.2</maven.plugin.compiler.version>
     <maven.plugin.release.version>2.2.2</maven.plugin.release.version>
     <maven.plugin.source.version>2.1.2</maven.plugin.source.version>
+    <maven.plugin.deploy.version>2.7</maven.plugin.deploy.version>
+    <maven.plugin.javadoc.version>2.8.1</maven.plugin.javadoc.version>
     <maven.wagon.webdav.version>1.0-beta-2</maven.wagon.webdav.version>
 
     <java.version>1.6</java.version>
@@ -268,6 +270,24 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>${maven.plugin.release.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>${maven.plugin.deploy.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>${maven.plugin.javadoc.version}</version>
+          <executions>
+            <execution>
+              <id>attach-javadocs</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -283,6 +303,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
     </plugins>
     <extensions>
