--- a/mujina-common/pom.xml
+++ b/mujina-common/pom.xml
@@ -18,14 +18,14 @@
   <parent>
     <groupId>org.surfnet.coin</groupId>
     <artifactId>mujina</artifactId>
-    <version>4-SNAPSHOT</version>
+    <version>4</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.surfnet.coin</groupId>
   <artifactId>mujina-common</artifactId>
-  <version>4-SNAPSHOT</version>
+  <version>4</version>
 
 
   <dependencies>
