--- a/mujina-sp/src/test/resources/mujina-sp.properties
+++ b/mujina-sp/src/test/resources/mujina-sp.properties
@@ -25,7 +25,7 @@ ASSERTION_CONSUMER_URL=${WEB_APPLICATION_CHANNEL}://${WEB_APPLICATION_HOST_AND_P
 
 MAX_PARSER_POOL_SIZE=2
 
-IDP_SSO_SERVICE_URL=http://localhost:18181/SingleSignOnService
+IDP_SSO_SERVICE_URL=http://itest.onegini.me:8989/saml/single-sign-on
 
 REPLAY_CACHE_LIFE_IN_MILLIS=14400000
 ISSUE_INSTANT_CHECK_CLOCK_SKEW_IN_SECONDS=90
