--- a/mujina-sp/pom.xml
+++ b/mujina-sp/pom.xml
@@ -19,12 +19,12 @@
   <groupId>org.surfnet.coin</groupId>
   <artifactId>mujina-sp</artifactId>
   <packaging>war</packaging>
-  <version>5</version>
+  <version>6-SNAPSHOT</version>
 
   <parent>
     <groupId>org.surfnet.coin</groupId>
     <artifactId>mujina</artifactId>
-    <version>5</version>
+    <version>6-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
