--- a/mujina-idp/pom.xml
+++ b/mujina-idp/pom.xml
@@ -19,12 +19,12 @@
   <groupId>org.surfnet.coin</groupId>
   <artifactId>mujina-idp</artifactId>
   <packaging>war</packaging>
-  <version>6-SNAPSHOT</version>
+  <version>6</version>
 
   <parent>
     <groupId>org.surfnet.coin</groupId>
     <artifactId>mujina</artifactId>
-    <version>6-SNAPSHOT</version>
+    <version>6</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
