--- a/mujina-idp-dist/pom.xml
+++ b/mujina-idp-dist/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <artifactId>mujina</artifactId>
     <groupId>org.surfnet.coin</groupId>
-    <version>7</version>
+    <version>8-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
