--- a/mujina-sp/src/main/webapp/WEB-INF/web.xml
+++ b/mujina-sp/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd">
   <display-name>spring-saml-sp</display-name>
 
   <filter>
@@ -27,6 +27,17 @@
 
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <!-- required to enable Spring 3.0 REST support -->
+  <filter>
+    <filter-name>httpMethodFilter</filter-name>
+    <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>httpMethodFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
