--- a/mujina-sp-dist/pom.xml
+++ b/mujina-sp-dist/pom.xml
@@ -18,13 +18,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>mujina</artifactId>
-    <groupId>org.surfnet.coin</groupId>
+    <groupId>com.onegini</groupId>
     <version>11-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.surfnet.coin</groupId>
+  <groupId>com.onegini</groupId>
   <artifactId>mujina-sp-dist</artifactId>
   <packaging>pom</packaging>
   <description>Mujina SP distribution package</description>
@@ -70,7 +70,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.surfnet.coin</groupId>
+      <groupId>com.onegini</groupId>
       <artifactId>mujina-sp</artifactId>
       <type>war</type>
       <version>${project.version}</version>
