--- a/mujina-sp/pom.xml
+++ b/mujina-sp/pom.xml
@@ -16,13 +16,13 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.surfnet.coin</groupId>
+  <groupId>com.onegini</groupId>
   <artifactId>mujina-sp</artifactId>
   <packaging>war</packaging>
   <version>11-SNAPSHOT</version>
 
   <parent>
-    <groupId>org.surfnet.coin</groupId>
+    <groupId>com.onegini</groupId>
     <artifactId>mujina</artifactId>
     <version>11-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
@@ -31,13 +31,13 @@
   <dependencies>
 
     <dependency>
-      <groupId>org.surfnet.coin</groupId>
+      <groupId>com.onegini</groupId>
       <artifactId>mujina-common</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>org.surfnet.coin</groupId>
+      <groupId>com.onegini</groupId>
       <artifactId>mujina-common</artifactId>
       <version>${project.parent.version}</version>
       <type>test-jar</type>
