--- a/pom.xml
+++ b/pom.xml
@@ -66,19 +66,20 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <spring.version>3.2.3.RELEASE</spring.version>
+    <spring.version>3.2.5.RELEASE</spring.version>
     <spring-security.version>3.1.4.RELEASE</spring-security.version>
-    <opensaml.version>2.5.3</opensaml.version>
+    <opensaml.version>2.6.0</opensaml.version>
     <mockito.version>1.9.5</mockito.version>
-    <xmlunit.version>1.3</xmlunit.version>
+    <xmlunit.version>1.5</xmlunit.version>
     <xml-apis.version>1.4.01</xml-apis.version>
     <jackson.version>1.9.5</jackson.version>
-    <scribe.version>1.3.0</scribe.version>
+    <scribe.version>1.3.5</scribe.version>
     <slf4j.version>1.7.5</slf4j.version>
     <junit.version>4.11</junit.version>
-    <commons-codec.version>1.4</commons-codec.version>
-    <commons-io.version>1.4</commons-io.version>
+    <commons-codec.version>1.8</commons-codec.version>
+    <commons-io.version>2.4</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
+    <commons-lang3.version>3.1</commons-lang3.version>
     <javax.servlet.version>2.5</javax.servlet.version>
     <javax.servlet.jsp.version>2.0</javax.servlet.jsp.version>
     <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
@@ -130,6 +131,11 @@
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
         <version>${commons-lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${commons-lang3.version}</version>
       </dependency>
 
       <dependency>
