--- a/mujina-sp/pom.xml
+++ b/mujina-sp/pom.xml
@@ -95,7 +95,7 @@
 
     <dependency>
       <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
+      <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -148,15 +148,17 @@
     <plugins>
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>6.1.26</version>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jetty-maven-plugin.version}</version>
         <configuration>
-          <contextPath>/</contextPath>
+          <webApp>
+            <contextPath>/</contextPath>
+          </webApp>
           <scanIntervalSeconds>3</scanIntervalSeconds>
           <stopPort>19966</stopPort>
           <stopKey>foo</stopKey>
           <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
               <port>19191</port>
               <maxIdleTime>60000</maxIdleTime>
             </connector>
