--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
   limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.onegini</groupId>
   <artifactId>mujina</artifactId>
@@ -80,10 +81,11 @@
     <commons-io.version>2.4</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
     <commons-lang3.version>3.1</commons-lang3.version>
-    <javax.servlet.version>2.5</javax.servlet.version>
-    <javax.servlet.jsp.version>2.0</javax.servlet.jsp.version>
+    <javax-servlet-api.version>3.0.1</javax-servlet-api.version>
+    <javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
     <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
 
+    <jetty-maven-plugin.version>8.1.14.v20131031</jetty-maven-plugin.version>
     <maven.plugin.compiler.version>2.3.2</maven.plugin.compiler.version>
     <maven.plugin.release.version>2.2.2</maven.plugin.release.version>
     <maven.plugin.source.version>2.1.2</maven.plugin.source.version>
@@ -91,7 +93,7 @@
     <maven.plugin.javadoc.version>2.8.1</maven.plugin.javadoc.version>
     <maven.wagon.webdav.version>1.0-beta-2</maven.wagon.webdav.version>
 
-    <java.version>1.6</java.version>
+    <java.version>1.7</java.version>
   </properties>
 
   <dependencyManagement>
@@ -99,8 +101,8 @@
 
       <dependency>
         <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>${javax.servlet.version}</version>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${javax-servlet-api.version}</version>
         <scope>provided</scope>
       </dependency>
 
