--- a/mujina-idp/pom.xml
+++ b/mujina-idp/pom.xml
@@ -143,12 +143,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.2</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>keytool-maven-plugin</artifactId>
-        <version>1.1</version>
+        <version>${keytool-maven-plugin.version}</version>
         <executions>
           <execution>
             <phase>generate-resources</phase>
@@ -161,7 +160,7 @@
             <phase>generate-resources</phase>
             <id>genkey</id>
             <goals>
-              <goal>genkey</goal>
+              <goal>generateKeyPair</goal>
             </goals>
           </execution>
         </executions>
