--- a/pom.xml
+++ b/pom.xml
@@ -84,12 +84,14 @@
     <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
 
     <jetty-maven-plugin.version>8.1.14.v20131031</jetty-maven-plugin.version>
-    <maven.plugin.compiler.version>2.3.2</maven.plugin.compiler.version>
-    <maven.plugin.release.version>2.2.2</maven.plugin.release.version>
-    <maven.plugin.source.version>2.1.2</maven.plugin.source.version>
-    <maven.plugin.deploy.version>2.7</maven.plugin.deploy.version>
-    <maven.plugin.javadoc.version>2.8.1</maven.plugin.javadoc.version>
+    <keytool-maven-plugin.version>1.3</keytool-maven-plugin.version>
+    <maven.plugin.compiler.version>3.1</maven.plugin.compiler.version>
+    <maven.plugin.release.version>2.4.2</maven.plugin.release.version>
+    <maven.plugin.source.version>2.2.1</maven.plugin.source.version>
+    <maven.plugin.deploy.version>2.8.1</maven.plugin.deploy.version>
+    <maven.plugin.javadoc.version>2.9.1</maven.plugin.javadoc.version>
     <maven.wagon.webdav.version>1.0-beta-2</maven.wagon.webdav.version>
+    <maven-war-plugin.version>2.4</maven-war-plugin.version>
 
     <java.version>1.7</java.version>
   </properties>
@@ -285,8 +287,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.plugin.compiler.version}</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
           </configuration>
         </plugin>
         <plugin>
@@ -325,6 +327,11 @@
               </goals>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${maven-war-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
