--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
     <javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
     <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
 
+    <cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
     <jetty-maven-plugin.version>8.1.14.v20131031</jetty-maven-plugin.version>
     <keytool-maven-plugin.version>1.3</keytool-maven-plugin.version>
     <maven.plugin.compiler.version>3.1</maven.plugin.compiler.version>
@@ -332,6 +333,19 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>${maven-war-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>${cobertura-maven-plugin.version}</version>
+          <configuration>
+            <check>false</check>
+            <formats>
+              <param>xml</param>
+              <param>html</param>
+            </formats>
+            <aggregate>true</aggregate>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
