--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
     <maven.plugin.source.version>2.2.1</maven.plugin.source.version>
     <maven.plugin.deploy.version>2.8.1</maven.plugin.deploy.version>
     <maven.plugin.javadoc.version>2.9.1</maven.plugin.javadoc.version>
+    <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
     <maven.wagon.webdav.version>1.0-beta-2</maven.wagon.webdav.version>
     <maven-war-plugin.version>2.4</maven-war-plugin.version>
 
@@ -347,6 +348,11 @@
             <aggregate>true</aggregate>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -366,6 +372,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <!-- See: http://stackoverflow.com/questions/7010665/testng-emma-cobertura-coverage-and-jdk-7-result-in-classformaterror-and-verif -->
+          <argLine>-XX:MaxPermSize=128m -XX:-UseSplitVerifier -Djava.awt.headless=true</argLine>
+        </configuration>
       </plugin>
     </plugins>
     <extensions>
