--- a/pom.xml
+++ b/pom.xml
@@ -57,8 +57,8 @@
 
   <scm>
     <connection>scm:git:https://github.com/Innovation-District/Mujina.git</connection>
-    <developerConnection>scm:git:https://github.com/Innovation-District/Mujina.git</developerConnection>
-    <url>scm:git:https://github.com/Innovation-District/Mujina.git</url>
+    <developerConnection>scm:git:git@github.com:Innovation-District/Mujina.git</developerConnection>
+    <url>scm:git:git@github.com:Innovation-District/Mujina.git</url>
     <tag>HEAD</tag>
   </scm>
 
